<resources>
    <string name="app_name">Jobino</string>

    <string name="text_search">Search</string>
    <string name="text_add">Add service</string>
    <string name="text_inbox">Inbox</string>
    <string name="text_profile">Profile</string>

    <string name="search_query">What are you looking for?</string>
    <string name="search_button">Search</string>

    <string name="toggle_advanced">Advanced</string>
    <string name="toggle_simple">Simple</string>

    <string name="category_prompt">Pick category: </string>
    <string-array name="service_category">
        <item>House</item>
        <item>Garden</item>
        <item>Education</item>
        <item>Sport</item>
    </string-array>

    <string name="date_pick">Pick date</string>

    <string name="price_range">Price range:</string>
    <string name="price_min">0</string>
    <string name="price_max">1000</string>

    <string name="location_pick">Pick location</string>
    <string name="user_name">Valentin Rigorsson, 21</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in nunc purus. Proin volutpat nibh at risus scelerisque, sed maximus tortor sollicitudin. Duis lacinia velit tempor nunc vestibulum, id condimentum est lobortis. Suspendisse nec efficitur orci. Sed sit amet erat sit amet massa faucibus egestas vel ultricies orci. Sed ac feugiat risus. Fusce maximus enim nec congue tincidunt. Vivamus nunc eros, porttitor nec mi a, scelerisque efficitur mi. Nulla a finibus augue. Morbi felis metus, porta in nisl eu, viverra maximus mauris. Proin eget elit dolor.
Aliquam venenatis, nisi ut faucibus vulputate, diam sapien hendrerit lectus, non sagittis dolor ligula vel ipsum. Fusce quis gravida mi. Cras quis risus massa. Curabitur nulla justo, accumsan vel tincidunt sit amet, suscipit vel nibh. Nunc at purus eget nulla imperdiet pulvinar pretium placerat enim. Fusce porta non nibh ut bibendum. Aliquam volutpat accumsan vehicula. Etiam condimentum, quam a rhoncus faucibus, sapien nibh porttitor tortor, sit amet placerat magna nisl vitae nulla. Vivamus eget nibh est. Phasellus ante nibh, pretium non nulla pretium, condimentum elementum lacus.Praesent porta lectus non sem ornare ornare. Fusce a massa nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. In at interdum eros.
Vestibulum vulputate mattis odio bibendum ultrices. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed velit eros, euismod non urna non, mollis rutrum lacus. Nulla volutpat at velit nec hendrerit. Vivamus nec laoreet velit, at varius elit. Pellentesque tempus nibh lobortis, pretium metus nec, luctus odio. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus consectetur ullamcorper risus, sed interdum leo luctus id. Pellentesque sed ullamcorper massa, sit amet scelerisque libero. Suspendisse sit amet tortor in arcu maximus euismod.
Vestibulum libero massa, pulvinar non massa eget, mattis porttitor lacus. Duis consequat eleifend quam. Curabitur tortor neque, pellentesque ac consectetur nec, facilisis vel augue. Aenean vulputate massa eget massa vulputate maximus. Morbi convallis felis quis aliquam aliquam. Integer placerat tortor sit amet gravida malesuada. Aenean lobortis nulla non lectus sagittis, quis lacinia augue ultricies. Morbi elementum pulvinar sodales. Nullam quis viverra sem. Sed porttitor eros ut diam condimentum dignissim. Ut ipsum odio, commodo a sagittis at, accumsan ut elit. Maecenas venenatis laoreet justo ut posuere.
Donec sit amet metus ut sapien congue cursus eu in orci. Duis eu tempus nulla. Nulla quis odio eu justo blandit ornare. Sed vehicula elementum auctor. Quisque sed erat nunc. Nunc aliquam, eros sit amet varius rutrum, magna orci gravida tellus, ut consequat tortor turpis et elit. Suspendisse tempor mi eget velit dignissim, eu eleifend est pulvinar. Donec et felis in dui molestie vulputate dapibus vitae magna. Pellentesque mi felis, semper id nisi condimentum, laoreet rhoncus massa. Phasellus iaculis condimentum rutrum. Nulla ut volutpat odio. Maecenas lectus nisi, molestie non erat ullamcorper, suscipit tempus risus. Sed quis tempor arcu, eget aliquam libero. Fusce vehicula magna dui, in sodales mi fermentum eu.
Nulla accumsan non tellus eget interdum. Fusce consequat quam sit amet orci ultrices ultrices. Maecenas euismod interdum lorem, ut interdum est ultrices nec. Fusce luctus diam lacus, vitae cursus magna gravida a. Praesent et sapien a enim viverra interdum. Nullam dictum diam in convallis tempus. Fusce et purus ante.
Praesent mollis ante erat, nec ullamcorper nibh rhoncus vitae. Nulla convallis lectus et molestie molestie. Ut ut commodo nisl. Proin sit amet urna blandit, sollicitudin lorem vulputate, varius purus. Aliquam eu neque velit. Integer volutpat, neque a facilisis pretium, massa nunc fringilla arcu, et suscipit nibh dolor a dolor. Nam eu consectetur sem, sed suscipit tortor. Nulla tempus tincidunt turpis, in aliquet tortor rhoncus id. Cras consequat odio sapien, id posuere mauris dictum quis. Proin sed elementum diam.
Quisque lobortis ornare tincidunt. In tellus orci, accumsan dignissim ornare at, egestas sit amet sem. In vel consectetur leo, at tincidunt odio. Quisque rhoncus nibh eros. Sed a justo at nunc ornare pulvinar. Praesent eget odio metus. Nullam iaculis, tellus a ornare ullamcorper, metus leo laoreet enim, eu posuere orci sapien eget ante. Quisque in lectus ipsum. Nullam ac sapien eget odio interdum pulvinar. Pellentesque vehicula pharetra orci eu aliquet. In ac tempus odio. Vestibulum eget enim id velit facilisis efficitur nec condimentum nisi. Quisque nec elit nec est tempor sollicitudin vitae ut neque. Vivamus quis sollicitudin velit, a commodo ex.</string>

    <string name="job1">Ski lessons</string>
    <string name="job2">Android developper</string>
    <string name="job3">Elementary math lessons</string>

    <string name="description1">I am giving ski lessons during the winter. I worked with th ESF so I am a certified teacher</string>
    <string name="description2">I learned Android when I was in school and I am able to develop a small app by myself, or I could be in a team for a bigger project</string>
    <string name="description3">I can give math lesson that are pretty basic, but also some advanced stuff as well</string>

    <string name="rating">Rating: </string>
    <string name="see_comments">See comments on Valentin</string>
    <string name="hide_comments">Hide comments on Valentin</string>

    <string name="comment1">Valentin did a great job at giving math lesson to my daughter, 5/5</string>
    <string name="comment2">We developped an app in Android together and we had a good time, plus he is very talented 5/5</string>
    <string name="comment3">The ski lesson I took was maybe too short but Valentin is a great teacher, 4/5</string>

    <string name="job_label">Insert the job label here</string>
    <string name="job_description">Give a description about your service</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="price_enter">Enter the price</string>
    <string name="date_enter">Choose a date</string>

</resources>
