<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.example.navbartest.SearchFragment" >

    <LinearLayout
        android:id="@+id/linear_search_text_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_query"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/search_query"/>

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_button"/>
    </LinearLayout>

    <ToggleButton
        android:id="@+id/advanced_search_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textOn="@string/toggle_advanced"
        android:textOff="@string/toggle_simple"/>

    <LinearLayout
        android:id="@+id/linear_scroll_view"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_search_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_prompt"/>

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:prompt="@string/category_prompt"
                android:entries="@array/service_category"/>
        </LinearLayout>

        <Button
            android:id="@+id/date_pick"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_pick"/>

        <io.apptik.widget.MultiSlider
            android:id="@+id/price_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:scaleStep="10"
            app:thumbNumber="2"
            app:scaleMin="0"
            app:scaleMax="1000"/>

        <RelativeLayout
            android:id="@+id/prices_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/price_min"/>

            <TextView
                android:id="@+id/price_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/price_max"/>
        </RelativeLayout>

        <Button
            android:id="@+id/location_pick"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_pick"/>
    </LinearLayout>

</LinearLayout>